--- a/style.css
+++ b/style.css
@@ -1,60 +1,23 @@
+@font-face {
+    font-family: 'SF-Pro';
+    src: url('/items/SF-Pro.ttf') format("opentype");
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: 1.3rem Inconsolata, monospace;
-    background: repeating-linear-gradient(
-    0deg,
-    rgba(black, 0.15),
-    rgba(black, 0.15) 1px,
-    transparent 1px,
-    transparent 2px
-  );
+    font-family: SF-Pro;
 }
 
 section {
     height: 100vh;
     display: flex;
+    color: rgb(77, 77, 77);
+    scroll-snap-align: start;
     justify-content: center;
     align-items: center;
-    color: white;
-    scroll-snap-align: start;
 }
-
-@import url(https://fonts.googleapis.com/css?family=Righteous);
-
-h2 {
-  display: inline-block;
-  color: white;
-  font-family: 'Righteous', serif;
-  font-size: 12em; 
-  text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
-  }
-  h2:after {
-    content: attr(data-shadow);
-    position: absolute;
-    top: .06em; left: .06em;
-    z-index: -1;
-    text-shadow: none;
-    background-image:
-      linear-gradient(
-        45deg,
-        transparent 45%,
-        hsla(48,20%,90%,1) 45%,
-        hsla(48,20%,90%,1) 55%,
-        transparent 0
-        );
-    background-size: .05em .05em;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  
-    animation: shad-anim 15s linear infinite;
-    }
-
-@keyframes shad-anim {
-  0% {background-position: 0 0}
-  0% {background-position: 100% -100%}
-  }
 
 .container {
     scroll-snap-type: y mandatory;
@@ -63,14 +26,14 @@ h2 {
 }
 
 .pageOne {
-    background: red;
+    background: whitesmoke;
 }
 .pageTwo {
-    background: yellow;
+    background: whitesmoke;
 }
 .pageThree {
-    background: green;
+    background: whitesmoke;
 }
 .pageFour {
-    background: blue;
+    background: whitesmoke;
 }
