--- a/style.css
+++ b/style.css
@@ -70,19 +70,24 @@ a {
   text-decoration: none;
   color: white;
 }
+.footer {
+  position: fixed;
+  bottom: 10px;
+  margin: auto;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+}
 ul {
-  margin-top: 7vw;
   display: flex;
   list-style-type: none;
-  margin-left: 8%;
   z-index: 1000;
   pointer-events: all;
 }
-
 li {
   flex: auto ;
   align-items: center;
-  display:inline-block;
+  display:inline;
   line-height: 1.0625; /* The height Apple used to tighten up the spacing a bit. */
-  font-weight: 300; /* Nice, chunky, bold! */
+  font-weight: 400; /* Nice, chunky, bold! */
 }
