--- a/style.css
+++ b/style.css
@@ -1,24 +1,54 @@
+:root {
+  --white: #fafafa;
+}
+
+#invertedCursor1, #invertedCursor2 {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+
+  top: var(--y, 0);
+  left: var(--x, 0);
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  mix-blend-mode: difference;
+  transition: transform .2s;
+}
+#invertedCursor2 {
+  width: 13px;
+  height: 13px;
+}
+
 body {
+  cursor: none;
+
   margin: 0;
   background-color: black;
-  color: white;
+  color: var(--white);
   max-width: 100%;
-  font-family: "Helvetica", Sans-Serif;
+  /* font-family: "Helvetica", Sans-Serif; */
+  font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
   overflow-y: scroll;
   max-width: 100vw;
   max-height: 100vw;
   overflow-x: hidden;
   height: 100vh;
+
+  /* No scrollbar */
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
 
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+  /* User can't select text */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 
   height: 100%;
   overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  text-shadow:1px 1px 1px rgba(0,0,0,0.004)
 }
 .app::-webkit-scrollbar {
   display: none;  /* Safari and Chrome */
@@ -27,28 +57,37 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  display: block;
   pointer-events: none;
-
+  display:block;
 }
 .pageOne h1 {
-  margin-top: 2vw;
+  vertical-align: middle;
   line-height: 1.0625;
   font-weight: 300;
-  font-size: 15.5vw;
-  letter-spacing: -0.77vw;
+  font-size: 5vw;
+  letter-spacing: -0.27vw;
+
+  margin-top: 20vw;
+  margin-left: 4vw;
 }
 .pageOne h3 {
   line-height: 1.0625; /* The height Apple used to tighten up the spacing a bit. */
   font-weight: 300; /* Nice, chunky, bold! */
-  font-size: 3.5vw;
+  font-size: 2vw;
   letter-spacing: -0.1vw;
-  margin-top: -6vw;
-  margin-left: 1vw;
+  margin-top: -3vw;
+  margin-left: 4vw;
 }
 .pageOne h6 {
   margin-left: 50%;
   margin-top: 100vw;
+}
+.pageTwo {
+  width: 100%;
+  height: 100%;
+  display: block;
+  pointer-events: none;
+
 }
 .arrow {
   display:inline-block;
@@ -69,7 +108,7 @@ background-color: #000000;
 .footer {
   position: fixed;
   bottom: 15px;
-  left: 0;
+  left: 0vw;
   right: 0;
   margin: auto;
   text-align: center;
@@ -91,13 +130,13 @@ background-color: #000000;
 }
 
 li {
-  font-size: 1vw;
+  font-size: 0.9vw;
   line-height: 1.0625; /* The height Apple used to tighten up the spacing a bit. */
   font-weight: 400; /* Nice, chunky, bold! */
-  text-align:center;
+  text-align: center;
   margin: 0 10px;
   display: inline-block;
-  width: 400px; /* set a fixed width */
+  width: 25vw; /* set a fixed width */
 }
 
 @media (max-width: 767px) {
