--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
   line-height: 1.0625;
   font-weight: 300;
   font-size: 5vw;
-  letter-spacing: -0.27vw;
+  letter-spacing: -0.17vw;
 
   margin-top: 20vw;
   margin-left: 4vw;
@@ -134,7 +134,7 @@ li {
   line-height: 1.0625; /* The height Apple used to tighten up the spacing a bit. */
   font-weight: 400; /* Nice, chunky, bold! */
   text-align: center;
-  margin: 0 10px;
+  margin: 0 0.8vw 0.8vw 0vw;
   display: inline-block;
   width: 25vw; /* set a fixed width */
 }
@@ -142,11 +142,25 @@ li {
 @media (max-width: 767px) {
     .flex-container {
         flex-wrap: wrap;
+        margin-bottom: 2vw;
+        justify-content: center;
+        align-items: center;
+    }
+    .pageOne h1 {
+      font-size: 10vw;
+    }
+    .pageOne h3 {
+      font-size: 5vw;
     }
     li {
         text-align: center;
         display: block;
-        margin-bottom: 10px;
+        margin-bottom: 3vw;
         font-size: 3vw;
+        margin-left: -3vw;
+        margin: 2vw 30vw 0vw -4vw;
+    }
+    #invertedCursor1, #invertedCursor2 {
+      display: none;
     }
 }
